# EssayLensTesting

./: .gitignore  AGENTS.md  DEVELOPMENT_PLAN.md  README.md  pyproject.toml
.planning/: PROJECT_SUMMARY.md  SERVER_CAPABILITY_MATRIX.md
configs/models/: gemma4.toml
configs/presets/: balanced.toml  cpu.toml  creative.toml  ctx-128k.toml  ctx-32k.toml  ctx-4k.toml  ctx-8k.toml  deterministic.toml  fa-off.toml  fa-on.toml  json-output.toml  kv-cache-off.toml  kv-cache-reuse.toml  kv-f16.toml  kv-k-turbo3-v-turbo4.toml  kv-q8_0.toml  kv-turbo3.toml  kv-turbo4.toml  long-output.toml  metal.toml  short-output.toml
configs/profiles/: essay-feedback-json.toml  essay-feedback.toml  local-gemma-fast.toml  local-gemma-json.toml  long-context-eval.toml
configs/requests/: default-chat.toml  essay-feedback-json.toml  essay-feedback.toml  json-chat.toml  streaming-chat.toml
configs/servers/: llama-cpp-default.toml  llama-cpp-kv-q8.toml  llama-cpp-long-context.toml
inputs/: essay_batch.toml  sample_essay.md
inputs/essays/: sample_essay.md
prompts/: essay_feedback_system.txt  essay_feedback_user.md  feedback_schema.json
prompts/schemas/: essay_feedback.schema.json
prompts/system/: essay_feedback_system.md
src/essaylens_testing/: __init__.py  __main__.py  cli.py  io.py  paths.py  runs.py
src/essaylens_testing/artifacts/: __init__.py  writer.py
src/essaylens_testing/client/: __init__.py  capabilities.py  chat_client.py  http.py  json_client.py  payloads.py  streaming_client.py
tests/: test_config_loader.py  test_payloads.py
(+20 files in other folders)
