[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "essaylens-testing"
version = "0.1.0"
description = "CLI harness for local LLM server testing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
essaylens = "essaylens_testing.cli:main"
essaylens-server = "essaylens_testing.cli:main_server"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
